--- a/src/i18n/locales/te.json
+++ b/src/i18n/locales/te.json
@@ -27,6 +27,11 @@
     "missionDesc": "విద్య, మౌలిక సదుపాయాలు, నైపుణ్యాభివృద్ధి మరియు జీవనోపాధి పెంపుదలలో లక్ష్య జోక్యాల ద్వారా షెడ్యూల్డ్ కులాల సమాజాల సమగ్ర అభివృద్ధి మరియు ఉద్ధరణను నిర్ధారించడం.",
     "beneficiaries": "లబ్ధిదారులు",
     "beneficiariesDesc": "విద్య, నైపుణ్యాభివృద్ధి, జీవనోపాధి మరియు మౌలిక సదుపాయాల అభివృద్ధి కోసం మద్దతు కోరుతున్న భారతదేశం అంతటా షెడ్యూల్డ్ కులాల సమాజ సభ్యులు.",
+    "beneficiaries": {
+      "item1": "పేదరిక గోటు కింద ఉన్న షెడ్యూల్డ్ కులాల (ఎస్‌సీ) కుటుంబాలు",
+      "item2": "నైపుణ్య అభివృద్ధి కోసం చూస్తున్న ఎస్‌సీ విద్యార్థులు మరియు యువత",
+      "item3": "సేవలు అందకుండా ఉన్న ప్రాంతాల్లో ఎస్‌సీ సమాజాలు"
+    },
     "keyGoals": "ముఖ్య లక్ష్యాలు",
     "goal1": "ఆదాయ సృష్టి ద్వారా పేదరిక తగ్గింపు",
     "goal2": "విద్యా పురోభివృద్ధి మరియు స్కాలర్‌షిప్‌లు",
@@ -38,6 +43,7 @@
     "skillTrainingsCompleted": "పూర్తయిన నైపుణ్య శిక్షణలు",
     "beneficiariesEmpowered": "సశక్తమైన లబ్ధిదారులు",
     "keyFeatures": "ముఖ్య లక్షణాలు",
+    "featuresDesc": "సమగ్ర సమాజ అభివృద్ధి కోసం రూపొందించబడిన వ్యాపక మద్దతు యంత్రాలు",
     "beneficiarySupportTitle": "లబ్ధిదారు మద్దతు",
     "beneficiarySupportDesc": "విద్య, గృహనిర్మాణం మరియు జీవనోపాధి కార్యక్రమాల కోసం షెడ్యూల్డ్ కులాల సమాజ సభ్యులకు ప్రత్యక్ష సహాయం",
     "directBenefitTitle": "ప్రత్యక్ష లాభ బదిలీ",
@@ -48,12 +54,67 @@
     "livelihoodDesc": "స్థిరమైన ఆదాయ సృష్టి కోసం నైపుణ్య శిక్షణ కార్యక్రమాలు మరియు ఉద్యోగ అవకాశాలు",
     "readyToStart": "ప్రారంభించడానికి సిద్ధంగా ఉన్నారా?",
     "joinDesc": "PM-AJAY పథకం నుండి ఇప్పటికే ప్రయోజనం పొందుతున్న వేలాది మంది లబ్ధిదారులతో చేరండి",
+    "footerDesc": "విద్య, మౌలిక సదుపాయాలు మరియు జీవనోపాధి మద్దతు ద్వారా షెడ్యూల్డ్ కులాల సమాజాల సమగ్ర అభివృద్ధి.",
     "footerQuickLinks": "శీఘ్ర లింక్‌లు",
     "footerMinistries": "ప్రభుత్వ మంత్రిత్వ శాఖలు",
     "ministryTribal": "గిరిజన వ్యవహారాల మంత్రిత్వ శాఖ",
     "ministrySocialJustice": "సామాజిక న్యాయం మరియు సాధికారత మంత్రిత్వ శాఖ",
     "nationalPortal": "భారతదేశ జాతీయ పోర్టల్",
-    "allRights": "అన్ని హక్కులు రిజర్వ్ చేయబడ్డాయి"
+    "digitalIndia": "డిజిటల్ ఇండియా",
+    "myGovIndia": "మైగవ్ ఇండియా",
+    "allRights": "అన్ని హక్కులు రిజర్వ్ చేయబడ్డాయి",
+    "privacyPolicy": "గోప్యతా విధానం",
+    "termsOfService": "సేవా నిబంధనలు",
+    "contactUs": "మమ్మల్ని సంప్రదించండి"
+  },
+  "landing2": {
+    "tagline": "మార్జినలైజ్డ్ సమాజాలను సశక్తం చేయడం",
+    "subtitle": "ప్రధాన మంత్రి అనుసూచిత జాతి అభ్యుదయ యోజన - షెడ్యూల్డ్ కులాల సమాజాల కోసం సమగ్ర అభివృద్ధి ప్రారంభం",
+    "applyNow": "ఇప్పుడే దరఖాస్తు చేయండి",
+    "checkEligibility": "అర్హత తనిఖీ చేయండి",
+    "schemeOverview": "పథకం అవలోకనం",
+    "ourMission": "మా లక్ష్యం",
+    "missionDesc": "పేదరిక తగ్గింపు, విద్య పెంపుదల, మౌలిక సదుపాయాల అభివృద్ధి మరియు స్థిరమైన జీవనోపాధి అవకాశాల ద్వారా షెడ్యూల్డ్ కులాల సమాజాలను ఉద్ధరించడానికి అంకితమైన వ్యాపక ప్రారంభం",
+    "missionDesc2": "పారదర్శక ప్రభుత్వం మరియు సమాజ పాల్గొనడం ద్వారా భారతదేశం అంతటా షెడ్యూల్డ్ కులాల సమాజాల సమగ్ర అభివృద్ధి, గుణాత్మక విద్య, ఆర్థిక సశక్తీకరణ, మౌలిక సదుపాయాల మెరుగుదల మరియు సామాజిక సమావేశాన్ని నిర్ధారించడం ద్వారా సమాన సమాజాన్ని సృష్టించడం.",
+    "beneficiaries": "లబ్ధిదారులు",
+    "beneficiaries": {
+      "item1": "పేదరిక గోటు కింద ఉన్న షెడ్యూల్డ్ కులాల (ఎస్‌సీ) కుటుంబాలు",
+      "item2": "నైపుణ్య అభివృద్ధి కోసం చూస్తున్న ఎస్‌సీ విద్యార్థులు మరియు యువత",
+      "item3": "సేవలు అందకుండా ఉన్న ప్రాంతాల్లో ఎస్‌సీ సమాజాలు"
+    },
+    "goal1": "లక్ష్య జోక్యాల ద్వారా షెడ్యూల్డ్ కులాల సమాజాలలో పేదరిక తగ్గింపు",
+    "goal2": "ఎస్‌సీ విద్యార్థుల కోసం విద్యా అవకాశాలను పెంచడం మరియు గుణాత్మక విద్యకు ప్రోత్సాహం ఇవ్వడం",
+    "goal3": "సుధారిత జీవన శైలి కోసం ఎస్‌సీ-ప్రభుత్వ ప్రాంతాలలో మౌలిక సదుపాయాల అభివృద్ధి",
+    "goal4": "స్థిరమైన ఆర్థిక వృద్ధి కోసం నైపుణ్య శిక్షణ మరియు జీవనోపాధి మద్దతు అందించడం",
+    "impactStats": "ప్రభావం మరియు విజయాలు",
+    "fundsAllocated": "కేటాయించబడిన నిధులు",
+    "developmentProjects": "అభివృద్ధి ప్రాజెక్టులు",
+    "skillTrainingBeneficiaries": "నైపుణ్య శిక్షణ లబ్ధిదారులు",
+    "scFamiliesBenefited": "ఎస్‌సీ కుటుంబాలు లాభం",
+    "keyFeatures": "ముఖ్య లక్షణాలు",
+    "featuresDesc": "సమగ్ర సమాజ అభివృద్ధి కోసం రూపొందించబడిన వ్యాపక మద్దతు యంత్రాలు",
+    "educationalSupportTitle": "విద్యా మద్దతు",
+    "educationalSupportDesc": "ప్రాథమిక నుండి ఉన్నత విద్య స్థాయి వరకు ఎస్‌సీ విద్యార్థుల కోసం స్కాలర్‌షిప్‌లు, కోచింగ్ కార్యక్రమాలు మరియు గుణాత్మక విద్య ప్రారంభాలు",
+    "directBenefitTitle": "ప్రత్యక్ష లాభ బదిలీ",
+    "directBenefitDesc": "ఆర్థిక సహాయం కోసం డీబీటీ యంత్రం ద్వారా లబ్ధిదారు ఖాతాలకు నేరుగా పారదర్శక నిధుల పంపిణీ",
+    "infrastructureTitle": "మౌలిక సదుపాయాల అభివృద్ధి",
+    "infrastructureDesc": "ఎస్‌సీ-ప్రభుత్వ గ్రామాలు మరియు నివాసాలలో సమాజ కేంద్రాలు, స్వచ్ఛతా సౌకర్యాలు, రహదార్లు మరియు అవసరమైన సౌకర్యాల నిర్మాణం",
+    "livelihoodTitle": "జీవనోపాధి పెంపుదల",
+    "livelihoodDesc": "నైపుణ్య అభివృద్ధి కార్యక్రమాలు, వృత్తి శిక్షణ, ఉద్యమ సమర్థన మరియు స్థిరమైన ఉద్యోగ అవకాశాలు",
+    "readyToStart": "ప్రారంభించడానికి సిద్ధంగా ఉన్నారా?",
+    "joinDesc": "దేశం అంతటా జీవితాలను మార్పిడి",
+    "joinDesc2": "PM-AJAY ద్వారా వారి జీవితాలను మార్చుకున్న వేలాది షెడ్యూల్డ్ కులాల కుటుంబాలతో చేరండి",
+    "footerDesc": "విద్య, మౌలిక సదుపాయాలు మరియు జీవనోపాధి మద్దతు ద్వారా షెడ్యూల్డ్ కులాల సమాజాల సమగ్ర అభివృద్ధి.",
+    "footerQuickLinks": "శీఘ్ర లింక్‌లు",
+    "footerMinistries": "మంత్రిత్వ శాఖ లింక్‌లు",
+    "ministrySocialJustice": "సామాజిక న్యాయం మరియు సాధికారత మంత్రిత్వ శాఖ",
+    "nationalPortal": "భారతదేశ జాతీయ పోర్టల్",
+    "digitalIndia": "డిజిటల్ ఇండియా",
+    "myGovIndia": "మైగవ్ ఇండియా",
+    "allRights": "అన్ని హక్కులు రిజర్వ్ చేయబడ్డాయి",
+    "privacyPolicy": "గోప్యతా విధానం",
+    "termsOfService": "సేవా నిబంధనలు",
+    "contactUs": "మమ్మల్ని సంప్రదించండి"
   },
   "login": {
     "welcomeBack": "తిరిగి స్వాగతం",
@@ -98,6 +159,42 @@
       "trackApplication": "దరఖాస్తును ట్రాక్ చేయండి",
       "viewBenefits": "ప్రయోజనాలను వీక్షించండి",
       "raiseGrievance": "ఫిర్యాదు లేవనెత్తండి"
+    },
+    "officer": {
+      "welcome": "స్వాగతం, అధికారి",
+      "overview": "లబ్ధిదారు దరఖాస్తులను పర్యవేక్షించండి మరియు నిర్వహించండి",
+      "totalApplications": "మొత్తం దరఖాస్తులు",
+      "trendApplications": "గత నెల నుండి +12%",
+      "approved": "ఆమోదించబడింది",
+      "approvalRate": "71.6% ఆమోదించే రేటు",
+      "pendingReview": "సమీక్ష పెండింగ్లో ఉంది",
+      "rejected": "తిరస్కరించబడింది",
+      "pendingApplications": "పెండింగ్ దరఖాస్తులు",
+      "pendingDescription": "మీ సమీక్ష కోసం వేచి ఉన్న దరఖాస్తులు",
+      "applicationId": "దరఖాస్తు #{{id}}",
+      "submittedDaysAgo": "{{days}} రోజుల క్రితం సమర్పించబడింది",
+      "review": "సమీక్ష"
+    },
+    "admin": {
+      "welcome": "అడ్మిన్ డాష్‌బోర్డ్",
+      "overview": "పూర్తి సిస్టమ్ అవలోకనం మరియు విశ్లేషణ",
+      "totalBeneficiaries": "మొత్తం లబ్ధిదారులు",
+      "beneficiaryGrowth": "+15% పెరుగుదల",
+      "totalFundsDisbursed": "మొత్తం విడుదలైన నిధులు",
+      "fundUtilization": "85% వినియోగం",
+      "activeProjects": "క్రియాశీల ప్రాజెక్టులు",
+      "systemGrowth": "సిస్టమ్ పెరుగుదల",
+      "regionalDistribution": "ప్రాంతీయ పంపిణీ",
+      "beneficiaryRegions": "ప్రాంతాలలో లబ్ధిదారులు",
+      "north": "ఉత్తర",
+      "south": "దక్షిణ",
+      "east": "తూర్పు",
+      "west": "పశ్చిమ",
+      "systemHealth": "సిస్టమ్ ఆరోగ్యం",
+      "platformMetrics": "ప్లాట్‌ఫారమ్ ప్రదర్శన మెట్రిక్స్",
+      "serverUptime": "సర్వర్ అప్‌టైమ్",
+      "activeUsers": "క్రియాశీల వినియోగదారులు (24గం)",
+      "avgResponseTime": "సగటు ప్రతిస్పందన సమయం"
     }
   },
   "common": {
@@ -113,5 +210,236 @@
     "import": "దిగుమతి చేయండి",
     "refresh": "రిఫ్రెష్ చేయండి",
     "close": "మూసివేయండి"
+  },
+  "modules": {
+    "beneficiaryForm": {
+      "title": "లబ్ధిదారు నమోదు ఫారం",
+      "description": "లబ్ధిదారుగా నమోదు చేయడానికి మీ వివరాలను నమోదు చేయండి",
+      "personalInfo": "వ్యక్తిగత సమాచారం",
+      "personalInfoDesc": "దయచేసి ఖచ్చితమైన సమాచారం అందించండి",
+      "fullName": "పూర్తి పేరు",
+      "fullNamePlaceholder": "మీ పూర్తి పేరును నమోదు చేయండి",
+      "aadhaar": "ఆధార్ సంఖ్య",
+      "aadhaarPlaceholder": "XXXX-XXXX-XXXX",
+      "phone": "ఫోన్ నంబర్",
+      "phonePlaceholder": "+91 XXXXX XXXXX",
+      "state": "రాష్ట్రం",
+      "selectState": "రాష్ట్రాన్ని ఎంచుకోండి",
+      "states": {
+        "maharashtra": "మహారాష్ట్ర",
+        "karnataka": "కర్నాటక",
+        "delhi": "దిల్లీ",
+        "tamilnadu": "తమిళనాడు"
+      },
+      "district": "జిల్లా",
+      "districtPlaceholder": "జిల్లాను నమోదు చేయండి",
+      "address": "పూర్తి చిరునామా",
+      "addressPlaceholder": "మీ పూర్తి చిరునామాను నమోదు చేయండి",
+      "submitButton": "దరఖాస్తును సమర్పించండి",
+      "submittedTitle": "దరఖాస్తు సమర్పించబడింది",
+      "submittedDescription": "మీ లబ్ధిదారు దరఖాస్తు విజయవంతంగా సమర్పించబడింది."
+    },
+    "projectTracking": {
+      "title": "ప్రాజెక్ట్ ట్రాకింగ్",
+      "description": "చల్లుతున్న మరియు పూర్తయిన ప్రాజెక్టులను పర్యవేక్షించండి",
+      "projectId": "ప్రాజెక్ట్ ఐడి",
+      "progress": "పురోగతి",
+      "status": {
+        "completed": "పూర్తయింది",
+        "inProgress": "పురోగతిలో ఉంది",
+        "pending": "పెండింగ్లో ఉంది"
+      },
+      "months": {
+        "jan": "జనవరి",
+        "feb": "ఫిబ్రవరి",
+        "mar": "మార్చి",
+        "apr": "ఏప్రిల్",
+        "may": "మే",
+        "jun": "జూన్",
+        "jul": "జులై",
+        "aug": "ఆగస్టు",
+        "sep": "సెప్టెంబర్",
+        "oct": "అక్టోబర్",
+        "nov": "నవంబర్",
+        "dec": "డిసెంబర్"
+      },
+      "projects": {
+        "healthcare": {
+          "name": "ఆరోగ్య మౌలిక సదుపాయాల అభివృద్ధి"
+        },
+        "healthAwareness": {
+          "name": "గ్రామీణ ఆరోగ్య అవగాహన కార్యక్రమం"
+        },
+        "medicalEquipment": {
+          "name": "వైద్య పరికరాల కొనుగోలు"
+        },
+        "telemedicine": {
+          "name": "టెలిమెడిసిన్ సేవ ప్రారంభం"
+        }
+      }
+    },
+    "fundUtilization": {
+      "title": "నిధుల వినియోగం",
+      "description": "ఆర్థిక కేటాయింపులను ట్రాక్ చేయండి మరియు నిర్వహించండి",
+      "stats": {
+        "allocated": "మొత్తం కేటాయించబడింది",
+        "utilized": "వినియోగించబడింది",
+        "utilizationRate": "{{rate}} వినియోగం",
+        "available": "అందుబాటులో ఉంది",
+        "pending": "ఆమోదం పెండింగ్లో ఉంది"
+      },
+      "recentTransactions": "ఇటీవలి లావాదేవీలు",
+      "transactionsDescription": "తాజా నిధుల వినియోగ కార్యాచరణలు",
+      "categories": {
+        "infrastructure": "మౌలిక సదుపాయాలు",
+        "training": "శిక్షణ",
+        "healthcare": "ఆరోగ్య సేవలు",
+        "marketing": "మార్కెటింగ్"
+      },
+      "transactions": {
+        "medicalEquipment": "వైద్య పరికరాల కొనుగోలు",
+        "staffTraining": "సిబ్బంది శిక్షణ కార్యక్రమం",
+        "medicineProcurement": "మందుల కొనుగోలు",
+        "awarenessCampaign": "అవగాహన కార్యక్రమం"
+      }
+    },
+    "skillTraining": {
+      "title": "నైపుణ్య శిక్షణ కార్యక్రమాలు",
+      "description": "మీ నైపుణ్యాలను పెంచుకోడానికి కోర్సులలో చేరండి",
+      "courseId": "ఐడి",
+      "enrollmentProgress": "నమోదు పురోగతి",
+      "courseFull": "కోర్సు పూర్తయింది",
+      "enrollNow": "ఇప్పుడే నమోదు చేయండి",
+      "status": {
+        "open": "తెరవండి",
+        "full": "పూర్తి"
+      },
+      "levels": {
+        "beginner": "బిగినర్",
+        "intermediate": "మధ్యస్థాయి",
+        "advanced": "అధునాతన"
+      },
+      "duration": {
+        "months_one": "1 నెల",
+        "months_other": "{{count}} నెలలు",
+        "weeks_one": "1 వారం",
+        "weeks_other": "{{count}} వారాలు"
+      },
+      "courses": {
+        "healthcareAssistant": "ఆరోగ్య సహాయక శిక్షణ",
+        "medicalEquipment": "వైద్య పరికరాల నిర్వహణ",
+        "firstAid": "అధునాతన ప్రాథమిక చికిత్సా ధృవీకరణ",
+        "digitalHealth": "డిజిటల్ ఆరోగ్య రికార్డుల నిర్వహణ"
+      }
+    },
+    "grievance": {
+      "title": "ఫిర్యాదు పరిష్కారం",
+      "description": "సమస్యలను నమోదు చేయండి మరియు వాటి పరిష్కారాన్ని ట్రాక్ చేయండి",
+      "submitNew": "కొత్త ఫిర్యాదును సమర్పించండి",
+      "submitDescription": "మీ సమస్యను వివరంగా వర్ణించండి",
+      "category": "వర్గం",
+      "selectCategory": "వర్గాన్ని ఎంచుకోండి",
+      "categories": {
+        "documentation": "పత్రాలు",
+        "payment": "చెల్లింపు",
+        "serviceQuality": "సేవా నాణ్యత",
+        "other": "ఇతర"
+      },
+      "subject": "విషయం",
+      "subjectPlaceholder": "సమస్య యొక్క సంక్షిప్త వివరణ",
+      "detailedDescription": "వివరమైన వివరణ",
+      "descriptionPlaceholder": "దయచేసి మీ ఫిర్యాదు గురించి వివరమైన సమాచారం అందించండి",
+      "submitButton": "ఫిర్యాదును సమర్పించండి",
+      "submittedTitle": "ఫిర్యాదు సమర్పించబడింది",
+      "submittedDescription": "మీ ఫిర్యాదు నమోదు చేయబడింది. మీకు ఇమెయిల్ ద్వారా నవీకరణలు అందించబడతాయి.",
+      "previousTitle": "ఇప్పటికే ఉన్న ఫిర్యాదులు",
+      "previousDescription": "మీరు సమర్పించిన ఫిర్యాదుల స్థితిని ట్రాక్ చేయండి",
+      "status": {
+        "resolved": "పరిష్కరించబడింది",
+        "inProgress": "పురోగతిలో ఉంది"
+      },
+      "previousGrievances": {
+        "docVerification": "పత్రాల ధృవీకరణలో ఆలస్యం",
+        "paymentNotReceived": "చెల్లింపు అందలేదు"
+      }
+    },
+    "feedback": {
+      "title": "అభిప్రాయం & సూచనలు",
+      "description": "మా సేవలను మెరుగుపరచడానికి మమ్మల్ని సహాయపడండి",
+      "shareExperience": "మీ అనుభవాన్ని పంచుకోండి",
+      "feedbackHelps": "మీ అభిప్రాయం మిమ్మల్ని బావుగా సేవ చేయడంలో మాకు సహాయపడుతుంది",
+      "rateExperience": "మీ అనుభవాన్ని రేట్ చేయండి",
+      "pleaseRate": "దయచేసి మీ అనుభవాన్ని రేట్ చేయండి",
+      "yourFeedback": "మీ అభిప్రాయం",
+      "placeholder": "మీ ఆలోచనలు, సూచనలు లేదా ఆందోళనలను పంచుకోండి...",
+      "submitButton": "అభిప్రాయాన్ని సమర్పించండి",
+      "thankYou": "ధన్యవాదాలు!",
+      "submittedDescription": "మీ అభిప్రాయం విజయవంతంగా సమర్పించబడింది.",
+      "statsTitle": "ఇటీవలి అభిప్రాయ గణాంకాలు",
+      "statsDescription": "సమాజ సంతృప్తి మెట్రిక్స్",
+      "basedOnReviews": "{{count}} సమీక్షల ఆధారంగా",
+      "ratings": {
+        "poor": "పేద",
+        "fair": "సరిపోయే",
+        "good": "బావు",
+        "veryGood": "చాలా బావు",
+        "excellent": "అద్భుతం"
+      }
+    },
+    "analytics": {
+      "title": "విశ్లేషణ & అంతర్దృష్టులు",
+      "description": "బెటర్ నిర్ణయాలు తీసుకోడానికి డేటా-ఆధారిత అంతర్దృష్టులు",
+      "stats": {
+        "totalBeneficiaries": "మొత్తం లబ్ధిదారులు",
+        "activeProjects": "క్రియాశీల ప్రాజెక్టులు",
+        "fundsAllocated": "కేటాయించబడిన నిధులు",
+        "growthRate": "పెరుగుదల రేటు"
+      },
+      "trends": {
+        "quarter": "{{percentage}} ఈ త్రైమాసికంలో",
+        "month": "{{percentage}} ఈ నెలలో",
+        "utilization": "{{percentage}} వినియోగించబడింది",
+        "yoy": "సంవత్సరం కి సంవత్సరం"
+      },
+      "enrollment": {
+        "title": "నెలవారీ నమోదు ప్రవృత్తి",
+        "description": "సమయంతో లబ్ధిదారు నమోదులు",
+        "registrations": "నమోదులు"
+      },
+      "categoryDistribution": {
+        "title": "వర్గం పంపిణీ",
+        "description": "వర్గం ప్రకారం ప్రాజెక్టులు"
+      },
+      "categories": {
+        "healthcare": "ఆరోగ్య సేవలు",
+        "infrastructure": "మౌలిక సదుపాయాలు",
+        "training": "శిక్షణ",
+        "awareness": "అవగాహన"
+      },
+      "statePerformance": {
+        "title": "రాష్ట్ర-వారీ ప్రదర్శన",
+        "description": "లబ్ధిదారు లెక్క ప్రకారం అగ్ర ప్రదర్శన చేసే రాష్ట్రాలు"
+      },
+      "states": {
+        "maharashtra": "మహారాష్ట్ర",
+        "karnataka": "కర్నాటక",
+        "tamilNadu": "తమిళనాడు",
+        "gujarat": "గుజరాత్",
+        "uttarPradesh": "ఉత్తర్ ప్రదేశ్",
+        "rajasthan": "రాజస్థాన్"
+      },
+      "months": {
+        "jan": "జనవరి",
+        "apr": "ఏప్రిల్",
+        "jul": "జులై",
+        "oct": "అక్టోబర్",
+        "dec": "డిసెంబర్",
+        "month": "నెల {{number}}"
+      }
+    },
+    "notFound": {
+      "message": "అయ్యో! పేజీ కనుగొనబడలేదు",
+      "returnHome": "హోమ్‌కు తిరిగి వెళ్లండి"
+    }
   }
 }
